<resources>
    <string name="app_name">WorkoutPlanner</string>
    <string name="titleHome">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="routines">Routines</string>
    <string name="calender">Calender</string>
    <string name="defaultId">1</string>
    <string name="defaulttitle">DefaultTitle</string>
    <string name="defaultWorkplanName">Name</string>
    <string name="weight">Weight</string>
    <string name="Time">Time</string>
    <string name="loginButton">Sign in with Email</string>
    <string name="signupButton">Sign up</string>
    <string name="loginText">Sign in to save your workouts to the cloud and sync to your different devices</string>
    <string name="personalDataText">Your login is only used to store your workout data, your personal data will not be shared</string>
    <string name="loginErrorText">*Something wen\'t wrong, try again</string>
    <string name="LoginTitle">Login</string>
    <string name="action_settings_title">Settings</string>
    <string name="logoutText">Logout</string>
    <string name="routineDialogTitle">New routine</string>
    <string name="routineDialogAccept">Ok</string>
    <string name="routineDialogDecline">Cancel</string>
    <string name="setSplitterText">X</string>
    <string name="editExerciseTypeText">Type</string>
    <string name="editExerciseWeigthHint">sets</string>
    <string name="editExerciseWeigthSecondHint">reps</string>
    <string name="editExerciseWeigthThirdHint">kg</string>
    <string name="editExerciseTimeHint">reps</string>
    <string name="editExerciseTimeSecondHint">time</string>
    <string name="editExerciseTimeThirdHint">km</string>
    <string name="defaultMuscle">Shoulders</string>
    <string name="muscleEditTextHint">Muscle</string>
    <string name="nameEditTextHint">Name</string>
    <string name="remove_routine_menu_text">Remove routine</string>
    <string name="invalid_number">Invalid number</string>
    <string name="required">Required</string>
    <string name="time_km_require">Time or km is required</string>
</resources>
