<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <include layout="@layout/tool_bar"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editExerciseTypeText"
            android:textSize="25dp"/>

        <RadioGroup
            android:id="@+id/exerciseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/WeightItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"/>
            <RadioButton
                android:id="@+id/TimeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:layout_marginLeft="15dp"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/NameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:textSize="25dp"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/MuscleAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Muscle"
                android:textSize="25dp"
                android:completionThreshold="0"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firstSetElement"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/editExerciseWeigthHint"
                    android:textSize="25dp"
                    />
            </android.support.design.widget.TextInputLayout>
            <include layout="@layout/edit_exercise_splitter"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/secondSetElement"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/editExerciseWeigthSecondHint"
                    android:textSize="25dp"
                    />
            </android.support.design.widget.TextInputLayout>
            <include layout="@layout/edit_exercise_splitter"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/thirdSetElement"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/editExerciseWeigthThirdHint"
                    android:textSize="25dp"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>